--- a/templates/website/package.json
+++ b/templates/website/package.json
@@ -30,6 +30,7 @@
     "@payloadcms/plugin-seo": "latest",
     "@payloadcms/richtext-lexical": "latest",
     "@payloadcms/ui": "latest",
+    "@payloadcms/translations": "latest",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
@@ -41,6 +42,7 @@
     "graphql": "^16.8.2",
     "lucide-react": "^0.378.0",
     "next": "^15.1.5",
+    "next-intl": "latest",
     "next-sitemap": "^4.2.3",
     "payload": "latest",
     "payload-admin-bar": "^1.0.6",
